<resources>
    <string name="app_name">Community</string>
    <string name="plain_text">Community</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="menu">Menu</string>
    <string name="insert_data">Insert data</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading</string>
    <string name="incorrect">Username and/or password are incorrect</string>
    <string name="not_available">Username not available</string>
    <string name="add_user">User added: </string>
    <string name="unregistered">Unregistered user</string>
    <string name="wrong_credential">Wrong credentials</string>
    <string name="title">Insert title:</string>
    <string name="text">Insert text:</string>
    <string name="act_new_req">New Request</string>
    <string name="act_opened_req">Opened Requests</string>
    <string name="act_all_req">All Requests</string>
    <string name="act_closed_req">Closed Requests</string>
    <string name="act_close_req">Close A Request</string>
    <string name="act_logout">Logout</string>
    <string name="act_info">Info</string>
    <string name="descr_new_req">Add a new request</string>
    <string name="descr_opened_req">View opened requests post by logged user</string>
    <string name="descr_all_req">View all opened requests of the community</string>
    <string name="descr_closed_req">View closed requests post by logged user</string>
    <string name="descr_close_req">Close an opened request post by logged user</string>
    <string name="descr_info">Android application to share requests</string>
    <string name="exit">Do you really want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_requests">No requests found</string>
    <string name="close_req">Request closed</string>
    <string name="answer">Answer</string>
    <string name="close">Close</string>
    <string name="key">QuestionKey</string>
...
